--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,25 +1,63 @@
 @import "~normalize.css";
 @import "_variables";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+html {
+  box-sizing: border-box;
+}
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-  background: #3767AD;
+  background: #3767ad;
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
-
+.button {
+  margin-top: 48px;
+  width: 216px;
+  height: 47px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 21px;
+}
 .heading {
   font-style: normal;
   font-weight: normal;
   font-size: 55px;
   margin: 87px 50px 68px 50px;
 }
-
-.button {
-  margin-top: 48px;
-  margin-bottom: 37px;
+.glass {
+  position: relative;
+  width: 280px;
+  height: 280px;
+  &__number {
+    top: 108px;
+    left: 108px;
+    position: absolute;
+    font-size: 112px;
+    color: #000;
+    margin: 0;
+    z-index: 1;
+  }
+}
+.secondary-button {
+  background: none;
+  border: none;
+  outline: none;
+  margin-top: 37px;
+  font-size: 14px;
+  color: #f5e5e7;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
 }
