--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,16 @@
 @import "~normalize.css";
 @import "_variables";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@keyframes bounce {
+
+    0% {
+      transform: scale(1)
+    }
+  100% {
+    transform: scale(1.2)
+  }
+}
+
 html {
   box-sizing: border-box;
 }
@@ -29,6 +39,8 @@ body {
   font-weight: 500;
   font-style: normal;
   line-height: 21px;
+  border: none;
+  border-radius: 4px;
 }
 .heading {
   font-style: normal;
@@ -44,6 +56,8 @@ body {
   align-items: center;
   width: 280px;
   height: 280px;
+  animation: bounce 2s ease-in-out infinite alternate;
+
   &__number {
     font-size: 100px;
     color: #000;
@@ -54,7 +68,6 @@ body {
 .secondary-button {
   background: none;
   border: none;
-  outline: none;
   margin-top: 37px;
   font-size: 14px;
   color: #f5e5e7;
