--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,6 +41,7 @@ body {
   line-height: 21px;
   border: none;
   border-radius: 4px;
+  background-color: #FFFFFF;
 }
 .heading {
   font-style: normal;
