--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,7 +60,7 @@ body {
   font-weight: normal;
   font-size: 55px;
   margin: 87px 50px 68px 50px;
-  border: red dotted;
+  border: dotted;
   padding: 20px;
   border-radius: 7px;
 }
