--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,10 +43,35 @@ body {
   background-color: #ffffff;
 }
 
+.box {
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
+  width: 100%;
+  padding: 10px;
+  background: none;
+  border: none;
+  &__back {
+    text-decoration: none;
+    opacity: 1;
+    &:hover {
+    opacity: 0.7;
+    }
+  }
+  &__clear {
+    opacity: 1;
+    border: none;
+    background: none;
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+}
+
 .date {
   text-align: center;
   font-size: 30px;
-  margin: 0;  
+  margin: 0;
 }
 
 .value {
@@ -86,19 +111,6 @@ body {
   padding: 10px;
   display: flex;
   align-self: flex-end;
-  background: none;
-  border: none;
-  text-decoration: none;
-  opacity: 1;
-  &:hover {
-    opacity: 0.7;
-  }
-}
-.back {
-  display: flex;
-  align-self: flex-start;
-  font-size: 30px;
-  padding: 10px;
   background: none;
   border: none;
   text-decoration: none;
